# manychat-python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
manychat/: api.py
manychat/fb/: sending.py  subscriber.py
src/manychat/: __init__.py
src/manychat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/manychat/fb/: __init__.py  page.py  sending.py  subscriber.py
src/manychat/utils/: api.py
tests/: manychat_tests.py
