[metadata]
name = manychat
version = 1.0.6
author = Daian Gan
author_email = daian@ganmedia.com
description = A Python package for ManyChat API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daiangan/manychat-python
project_urls =
    Bug Tracker = https://github.com/daiangan/manychat-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src